ansible/config-tree/common/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow udp 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow tcp 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow any 33443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 33443 -j ACCEPT
-A ufw-user-input -p udp --dport 33443 -j ACCEPT

### tuple ### allow any 11443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 11443 -j ACCEPT
-A ufw-user-input -p udp --dport 11443 -j ACCEPT

### tuple ### allow any 33555 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 33555 -j ACCEPT
-A ufw-user-input -p udp --dport 33555 -j ACCEPT

### tuple ### allow any 139 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 139 -j ACCEPT
-A ufw-user-input -p udp --dport 139 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out_tun0
-A ufw-user-output -o tun0 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_tun0
-A ufw-user-input -i tun0 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_docker0
-A ufw-user-input -i docker0 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 in_weave
-A ufw-user-input -i weave -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out_docker0
-A ufw-user-output -o docker0 -j ACCEPT

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out_weave
-A ufw-user-output -o weave -j ACCEPT

### tuple ### allow any 9100 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9100 -j ACCEPT
-A ufw-user-input -p udp --dport 9100 -j ACCEPT

### tuple ### allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - in
-A ufw-user-input -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - in
-A ufw-user-input -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### allow any 6443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 6443 -j ACCEPT
-A ufw-user-input -p udp --dport 6443 -j ACCEPT

### tuple ### allow any 22124 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22124 -j ACCEPT
-A ufw-user-input -p udp --dport 22124 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
